[gd_scene load_steps=3 format=1]

[ext_resource path="res://scripts/InGameMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/big_match_35.fnt" type="BitmapFont" id=2]

[node name="InGameMenu" type="Control"]

process/pause_mode = 2
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="MenuBtn" type="Button" parent="."]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 110.0
margin/top = 20.0
margin/right = 29.0
margin/bottom = 85.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "เมนู"
flat = false

[node name="Menu" type="Control" parent="."]

material/use_parent = true
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="Resume" type="Button" parent="Menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 584.0
margin/top = 260.0
margin/right = 758.0
margin/bottom = 322.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "เล่นต่อ"
flat = false

[node name="GoToMainMenu" type="Button" parent="Menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 570.0
margin/top = 346.0
margin/right = 778.0
margin/bottom = 408.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "ไปหน้าหลัก"
flat = false

[connection signal="pressed" from="MenuBtn" to="." method="_on_MenuBtn_pressed"]

[connection signal="pressed" from="Menu/Resume" to="." method="_on_Resume_pressed"]

[connection signal="pressed" from="Menu/GoToMainMenu" to="." method="_on_GoToMainMenu_pressed"]


